# Kanomori

./: .dockerignore  .env.cuda-worker.example  .env.example  .gitignore  CLAUDE.md  HANDOFF.md  HANDOFF_TO_GPT.md  README.md  README.zh-CN.md  docker-compose.cuda-worker.yml  docker-compose.yml  kanomori_project_white_paper.md  pyproject.toml
docker/: cuda-worker.Dockerfile
docs/: ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  README.md  README.zh-CN.md  cuda-worker-docker.md  cuda-worker-docker.zh-CN.md  distributed-ingestion.md  distributed-ingestion.zh-CN.md  getting-started.md  getting-started.zh-CN.md
docs/plans/: 2026-06-24-distributed-ingestion-design.md
eval/ocr/: kanomori_frames.jsonl
migrations/: 0001_init.sql  0002_visual.sql  0003_lease.sql  0004_job_time_costs.sql
samples/: README.md  README.zh-CN.md  manifest.jsonl
src/kanomori/: __init__.py  config.py  db.py  evaluation.py  fusion.py  kits_client.py  media_source.py  migrate.py  models.py  ocr.py  ocr_benchmark.py  ocr_tensorrt.py  source_metadata.py  source_organizer.py  source_webdav.py  srt.py  subprocess_stream.py  text.py
src/kanomori/api/: __init__.py  app.py  jobs.py
src/kanomori/embed/: __init__.py  asr.py  image_embedder.py  phash.py  text_embedder.py
src/kanomori/ingest/: __init__.py  artifacts.py  coordinator_client.py  job_time_costs.py  lease.py  pipeline.py  stage_device.py  stage_result.py  worker.py
src/kanomori/ingest/stages/: __init__.py  classify.py  frames.py  image_embed.py  locate_media.py  ocr.py  parse_transcript.py  register.py  transcribe.py
src/kanomori/retrieval/: __init__.py  audio.py  audio_query.py  merge.py  result.py  screenshot.py  transcript.py
src/kanomori/web/templates/: _results.html  base.html  index.html  result.html
tests/: test_scaffolding.py
tests/fixtures/: sample.srt
tests/fixtures/eval/: 2024_talk_cut.json
tests/integration/: conftest.py  test_api.py  test_audio_retrieval.py  test_compute_only_dry_run.py  test_coordinator.py  test_ingest_batch.py  test_ingest_pipeline.py  test_lease_and_enqueue.py  test_result_detail.py  test_retrieval_eval_real_models.py  test_screenshot_retrieval.py  test_transcript_retrieval.py  test_visual_e2e_real_models.py  test_visual_schema.py  test_visual_stages.py  test_web_ui.py  test_worker.py
tests/unit/: test_app_error_logging.py  test_app_preload.py  test_asr.py  test_audio_aggregator.py  test_audio_query.py  test_coordinator_client.py  test_evaluation.py  test_frame_name_roundtrip.py  test_frames_stage.py  test_fusion.py  test_image_embedder.py  test_ingest_batch.py  test_job_time_costs.py  test_jobs_router.py  test_kits_client.py  test_locate_media.py  test_media_source.py  test_merge.py  test_ocr.py  test_ocr_benchmark.py  test_ocr_tensorrt.py  test_phash.py  test_register_identity.py  test_screenshot_ocr.py  test_source_organizer.py  test_srt.py  test_stage_compute_persist.py  test_stage_result.py  test_text.py  test_text_embedder.py  test_transcribe_stage.py  test_visual_artifacts.py  test_worker_distributed.py
