[project]
name = "kanomori"
version = "0.1.0"
description = "Multimodal moment-level retrieval for VTuber (鹿乃) livestream archives"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { text = "MIT" }

# Core runtime deps are CPU-only and intentionally light: enough for the API skeleton,
# the DB layer, and the pure-logic modules (srt/fusion/scene). The heavy ML / ingestion
# stacks live in opt-in dependency groups (`embed`, `ingest`) so `uv sync` stays fast and
# never pulls KITS's GPU torch stack. KITS is consumed as a subprocess, never imported.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3.6",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "numpy>=2.0",
]

[project.scripts]
kanomori-migrate = "kanomori.migrate:main"
kanomori-worker = "kanomori.ingest.worker:main"
kanomori-ocr-benchmark = "kanomori.ocr_benchmark:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kanomori"]

[dependency-groups]
# Default group: installed by `uv sync`. Lint + test only — pure-logic tests need nothing else.
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "httpx>=0.28",
]
# Shared offline ingestion dependencies that do not select an ONNX Runtime wheel.
ingest-base = [
    "pillow>=11.0",
    "imagehash>=4.3",
    "scenedetect>=0.6.5",
    "opencv-python>=4.8",
    "ffmpeg-python>=0.2",
    "fugashi[unidic-lite]>=1.3",
    "rapidocr>=3.9.0",
]
# CPU ONNX Runtime OCR backend. Kept separate so CUDA worker installs do not also pull the
# CPU onnxruntime wheel into the same environment as onnxruntime-gpu.
ocr-cpu = [
    "rapidocr-onnxruntime>=1.4",
    "onnxruntime>=1.20",
]
# Offline ingestion (frames/OCR/JP tokenization) with CPU OCR. `uv sync --group ingest`.
ingest = [
    { include-group = "ingest-base" },
    { include-group = "ocr-cpu" },
]
# Optional OCR bake-off engines. Not installed by default and not required for production.
ocr-eval = [
    { include-group = "ingest-base" },
    { include-group = "ocr-cpu" },
]
# Optional NVIDIA-only ONNX Runtime CUDA OCR backend. Linux x86_64 only.
ocr-cuda = [
    { include-group = "ingest-base" },
    "onnxruntime-gpu==1.27.0; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "nvidia-cuda-runtime==13.0.96; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "nvidia-cuda-nvrtc==13.0.88; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "nvidia-cublas==13.1.1.3; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "nvidia-curand==10.4.0.35; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "nvidia-cufft==12.0.0.61; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "nvidia-cudnn-cu13==9.20.0.48; platform_system == 'Linux' and platform_machine == 'x86_64'",
]
# Optional NVIDIA-only TensorRT OCR backend. Install `tensorrt` on the NVIDIA host from
# NVIDIA's package index; uv's universal lock tries to build its Linux wheel stub on macOS.
ocr-trt = [
    "cuda-bindings>=12.0; platform_system == 'Linux' and platform_machine == 'x86_64'",
]
# Embedding / scene-classification models. Pulls CPU torch (NOT cu128). `uv sync --group embed`.
embed = [
    "FlagEmbedding>=1.3",
    "sentence-transformers>=3.3",
    "transformers>=4.46",
    "torch>=2.5",
    "torchvision>=0.27.1",
]
# Full worker install targets. Use these with exact `uv sync`; syncing only a leaf group will
# remove packages from groups that are not selected.
worker-cpu = [
    { include-group = "ingest" },
    { include-group = "embed" },
]
worker-cuda = [
    { include-group = "ocr-cuda" },
    { include-group = "embed" },
]
worker-trt = [
    { include-group = "worker-cuda" },
    { include-group = "ocr-trt" },
]

# Default groups installed by bare `uv sync`. embed/ingest are opt-in to keep setup fast.
[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
filterwarnings = [
    # Third-party: Starlette's TestClient warns about httpx; not our code, and TestClient is
    # test-only. Matched by message (the category is Starlette-specific) so genuine warnings
    # from our code still surface.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
    # Third-party C-extension (SWIG, via torch/onnx in the embed group) emits these at import.
    "ignore:builtin type SwigPy.* has no __module__ attribute",
    "ignore:builtin type swigvarlink has no __module__ attribute",
]
markers = [
    "requires_db: needs a live PostgreSQL+pgvector (integration); skipped in lightweight CI",
    "requires_models: needs ML models loaded (BGE-M3/DINOv2/SigLIP); mirrors KITS's requires_torch",
]
